[package]
name = "ebox"
version = "0.1.13"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env", "string", "unicode"] }
chrono = "0.4.38"
walkdir = "2.5.0"
ffmpeg-next = { version = "7.1.0", features = ["static"] }
rayon = "1.10.0"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
async-openai = { version = "0.27.1", features = ["native-tls", "realtime"] }
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
shellexpand = "3.1.0"
prettytable = "0.10.0"
strsim = "0.11.1"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
humansize = "2.1.3"
regex = "1.11.1"
docx-rs = "0.4.17"
glob = "0.3.2"
zip = "2.2.2"
serde_json = "1.0.134"
dirs = "6.0.0"
log = "0.4.22"
csv = "1.3.1"
num_cpus = "1.16.0"
rand = "0.8.5"
reqwest = "0.12.12"
image = "0.25.5"
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
colored = "3.0.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
hound = "3.5.1"

[[bin]]
name = "vmd"
path = "src/bin/vmd.rs"

[[bin]]
name = "ag"
path = "src/bin/ag.rs"


[[bin]]
name = "mf"
path = "src/bin/mf.rs"



[[bin]]
name = "sz"
path = "src/bin/sz.rs"



[[bin]]
name = "am"
path = "src/bin/am.rs"

[[bin]]
name = "pmov"
path = "src/bin/pmov.rs"

[[bin]]
name = "sufk"
path = "src/bin/sufk.rs"

[[bin]]
name = "rstrip"
path = "src/bin/rstrip.rs"

[[bin]]
name = "wprune"
path = "src/bin/wprune.rs"


[[bin]]
name = "pdfp"
path = "src/bin/pdfp.rs"

[[bin]]
name = "bdocx"
path = "src/bin/bdocx.rs"

[[bin]]
name = "onize"
path = "src/bin/onize.rs"

[[bin]]
name = "rpl"
path = "src/bin/rpl.rs"

[[bin]]
name = "facm"
path = "src/bin/facm.rs"

[[bin]]
name = "arep"
path = "src/bin/arep.rs"

[[bin]]
name = "avd"
path = "src/bin/avd.rs"

[[bin]]
name = "pps"
path = "src/bin/pps.rs"

[[bin]]
name = "cdd"
path = "src/bin/cdd.rs"

[[bin]]
name = "vlc"
path = "src/bin/vlc/main.rs"

[[bin]]
name = "reduce"
path = "src/bin/reduce.rs"

[[bin]]
name = "pls"
path = "src/bin/pls.rs"

[[bin]]
name = "pam"
path = "src/bin/pam.rs"


[[bin]]
name = "xect"
path = "src/bin/xect.rs"


[[bin]]
name = "aupr"
path = "src/bin/aupr.rs"

[[bin]]
name = "cpr"
path = "src/bin/cpr.rs"
